# octosphere

./: .gitignore  .sesskey  Procfile  README.md  __init__.py  app.py  bridge.py  cli.py  main.py  pyproject.toml  settings.py
lexicon/: com.octopus.publication.json  social.octosphere.publication.json
migrations/: 0001-initial.sql  0002-add-octopus-user-id.sql
octopus/: __init__.py  client.py
scripts/: cleanup_duplicates.py  delete_all_publications.py  publish_lexicon.py
src/octosphere/: __init__.py  app.py  bridge.py  database.py  orcid.py  settings.py  tasks.py
src/octosphere/atproto/: __init__.py  client.py  models.py
src/octosphere/octopus/: client.py
tests/: __init__.py  test_app.py  test_atproto.py  test_bridge.py  test_database.py  test_octopus.py  test_tasks.py
