I [project]
name = "octosphere"
version = "0.1.0"
description = "Octopus → AT Proto bridge (PoC)"
requires-python = ">=3.11"
dependencies = [
  "python-fasthtml @ git+https://github.com/AnswerDotAI/fasthtml.git",
  "requests>=2.31.0",
  "uvicorn>=0.30.0",
  "fastlite>=0.0.9",
  "fastmigrate>=0.0.2",
  "cryptography>=42.0.0",
  "atproto>=0.0.55",
  "websockets>=12.0",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0.0",
  "pytest-cov>=4.0.0",
  "responses>=0.25.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/octosphere"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.uv]
package = false
